--- a/index.html
+++ b/index.html
@@ -125,11 +125,6 @@
                                                     <i class="bi bi-github"></i>
                                                 </a>
                                             </li>
-                                            <li class="a-header">
-                                                <a href="" target="_blank" class="c-social-button  t-social-button">
-                                                    <i class="fab  fa-lg  fa-twitter"></i>
-                                                </a>
-                                            </li>
                                         </ul><!-- /c-header__social-buttons -->
 
                                     </div><!-- /c-header__top -->
@@ -165,11 +160,11 @@
                                             <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                                 <div class="a-header  o-content">
                                                     <div class="o-content__body">
-                                                        <a href="#" target="_blank" class="t-link-container">
+                                                        <a href="https://salomon-mtz.github.io/salomonresume.github.io/" target="_blank" class="t-link-container">
                                                             <h4>Web</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    salomon.github.io
+                                                                    salomonresume.github.io
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
@@ -1294,7 +1289,7 @@
                                     Portfolio
                                 </h2>
                                 <div class="o-content__body  o-section__description">
-                                    My recent work.
+                                    My most recent work.
                                 </div>
                             </div>
                         </header><!-- /o-section__header -->
@@ -1312,14 +1307,14 @@
                                             </h3>
                                             <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Mexican web development startup founder by me with the objective of helping other companies to have their own web site without spending much money.
                                             </p>
                                         </div>
                                     </a>
                                 </div><!-- /o-grid__col -->
 
                                 <div class="o-grid__col-sm-6">
-                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" href="assets/images/portfolio/fratellis.png" data-lightbox-hidpi="" title="Tunnel Effect" data-lightbox-gallery="portfolio">
+                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" target="_blank" href="https://fratelli-s.github.io/fratellis.github.io/" data-lightbox-hidpi="" title="Tunnel Effect" data-lightbox-gallery="portfolio">
                                         <img src="assets/images/portfolio/fratellis.png" alt="">
                                         <div class="c-image-overlay__content">
                                             <h3>
@@ -1327,67 +1322,67 @@
                                             </h3>
                                             <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Landing page and service booking website for a local ice cream gourmet shop via contact API and forms. Full responsive web page using html, css, javascript, bootstrap and jquery. 
                                             </p>
                                         </div>
                                     </a>
                                 </div><!-- /o-grid__col -->
 
                                 <div class="o-grid__col-sm-6">
-                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" href="assets/images/portfolio/3_full.jpg" data-lightbox-hidpi="" title="New York, New York" data-lightbox-gallery="portfolio">
-                                        <img src="assets/images/portfolio/3_thumb.jpg" alt="">
+                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" target="_blank" href="https://boom-percussion.netlify.app/index.html" data-lightbox-hidpi="" title="New York, New York" data-lightbox-gallery="portfolio">
+                                        <img src="assets/images/portfolio/boom.png" alt="">
                                         <div class="c-image-overlay__content">
                                             <h3>
                                                 Boom Percussion
                                             </h3>
                                             <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Full responsive videogame landing page using bootstrap, html and css for the front-end. For the back-end Django and Sqlite where used to give functionality to stats page and login and signup pages as well.
                                             </p>
                                         </div>
                                     </a>
                                 </div><!-- /o-grid__col -->
 
                                 <div class="o-grid__col-sm-6">
-                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" href="assets/images/portfolio/4_full.jpg" data-lightbox-hidpi="" title="Sky High" data-lightbox-gallery="portfolio">
-                                        <img src="assets/images/portfolio/4_thumb.jpg" alt="">
+                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" target="_blank" href="https://github.com/Salomon-mtz/CyberBookApp.git" data-lightbox-hidpi="" title="Sky High" data-lightbox-gallery="portfolio">
+                                        <img src="assets/images/portfolio/cyber.png" alt="">
                                         <div class="c-image-overlay__content">
                                             <h3>
                                                 CyberBook
                                             </h3>
                                             <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Mobile IOS app landing page using html, bootstrap and css for the fron-end. Django, Sqlite and Django REST used for the back-end in order to communicate to the Mobile Application developed in Swift storyboards. 
                                             </p>
                                         </div>
                                     </a>
                                 </div><!-- /o-grid__col -->
 
                                 <div class="o-grid__col-sm-6">
-                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" href="assets/images/portfolio/5_full.jpg" data-lightbox-hidpi="" title="The Eiffel Tower" data-lightbox-gallery="portfolio">
-                                        <img src="assets/images/portfolio/5_thumb.jpg" alt="">
+                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" target="_blank" href="https://mgservicio2023.github.io/contadores.github.io/" data-lightbox-hidpi="" title="The Eiffel Tower" data-lightbox-gallery="portfolio">
+                                        <img src="assets/images/portfolio/cmc.png" alt="">
                                         <div class="c-image-overlay__content">
                                             <h3>
                                                 CMCYA
                                             </h3>
                                             <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Full responsive landing page for and accounting company. Using html, css and javascript with the implementation of email api for contact form.
                                             </p>
                                         </div>
                                     </a>
                                 </div><!-- /o-grid__col -->
 
                                 <div class="o-grid__col-sm-6">
-                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" href="assets/images/portfolio/6_full.jpg" data-lightbox-hidpi="" title="Reaching the Clouds" data-lightbox-gallery="portfolio">
-                                        <img src="assets/images/portfolio/6_thumb.jpg" alt="">
+                                    <a class="c-image-overlay  t-image-overlay  js-lightbox" target="_blank" href="https://salomon-mtz.github.io/sp.github.io/" data-lightbox-hidpi="" title="Reaching the Clouds" data-lightbox-gallery="portfolio">
+                                        <img src="assets/images/portfolio/sp.png" alt="">
                                         <div class="c-image-overlay__content">
                                             <h3>
-                                                Reaching the Clouds
+                                                Salomon Photo
                                             </h3>
                                             <hr class="c-image-overlay__deco-line  t-image-overlay__deco-line" />
                                             <p>
-                                                Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                                Responsive website portfolio for my personal work as a photographer. Using html, css and javascript as well as an API for the email contact form. 
                                             </p>
                                         </div>
                                     </a>
@@ -1457,11 +1452,11 @@
                                     <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                         <div class="o-content">
                                             <div class="o-content__body">
-                                                <a href="#" target="_blank" class="t-link-container">
+                                                <a href="https://salomon-mtz.github.io/salomonresume.github.io/" target="_blank" class="t-link-container">
                                                     <h4>Web</h4>
                                                     <p>
                                                         <span class="t-link-container__item--blended">
-                                                            salomon.github.io
+                                                            salomonresume.github.io
                                                         </span>
                                                     </p>
                                                 </a><!-- /o-link-container -->
@@ -1519,11 +1514,6 @@
                                             <li class="a-footer">
                                                 <a href="" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="bi bi-github"></i>
-                                                </a>
-                                            </li>
-                                            <li class="a-footer">
-                                                <a href="" target="_blank" class="c-social-button  t-social-button">
-                                                    <i class="fab  fa-lg  fa-twitter"></i>
                                                 </a>
                                             </li>
                                         </ul><!-- /c-footer__social-buttons -->
