--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
 
                                         <ul class="c-header__social-buttons  c-social-buttons">
                                             <li class="a-header">
-                                                <a href="" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://www.linkedin.com/in/salomón-martínez-7064181a9/" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="bi bi-linkedin"></i>
                                                 </a>
                                             </li>
                                             <li class="a-header">
-                                                <a href="" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://github.com/Salomon-mtz" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="bi bi-github"></i>
                                                 </a>
                                             </li>
@@ -1507,12 +1507,12 @@
 
                                         <ul class="c-footer__social-buttons  c-social-buttons  o-content__body">
                                             <li class="a-footer">
-                                                <a href="" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://www.linkedin.com/in/salomón-martínez-7064181a9/" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="bi bi-linkedin"></i>
                                                 </a>
                                             </li>
                                             <li class="a-footer">
-                                                <a href="" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://github.com/Salomon-mtz" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="bi bi-github"></i>
                                                 </a>
                                             </li>
