--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
         <!-- Main JS -->
         <script src="assets/js/main.js"></script>
+
+        <link rel="shortcut icon" href="images/favicon.jpg">
     </head>
 
     <body>
