--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- Main JS -->
         <script src="assets/js/main.js"></script>
 
-        <link rel="shortcut icon" href="images/favicon.jpg">
+        <link rel="shortcut icon" href="assets/images/favicon.jpg">
     </head>
 
     <body>
