--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
                                                     August 2022 &ndash; October 2022
                                                 </div>
                                                 <h3 class="c-work__heading">
-                                                    Institue of Technology of Monterrey
+                                                    Institute of Technology of Monterrey
                                                 </h3>
                                                 <h4 class="c-work__title">
                                                     Mobile Application Developer
@@ -965,7 +965,7 @@
                                                         2020 &ndash; 2024
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Institue of Technology of Monterrey
+                                                        Institute of Technology of Monterrey
                                                     </h3>
                                                     <h4 class="c-work__title">
                                                         Bachelor in Computing Technologies Engineering
@@ -998,7 +998,7 @@
                                                         2017 &ndash; 2020
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Institue of Technology of Monterrey
+                                                        Institute of Technology of Monterrey
                                                     </h3>
                                                     <h4 class="c-work__title">
                                                         High School Diploma
